unpackaged/main/default/objects/APXTConga4__Conga_Solution_Email_Template__c/fields/APXTConga4__Conga_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Conga_Email_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conga Email Template</label>
    <referenceTo>APXTConga4__Conga_Email_Template__c</referenceTo>
    <relationshipLabel>Conga Solution Email Templates</relationshipLabel>
    <relationshipName>Conga_Solution_Email_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>