unpackaged/main/default/objects/APXTConga4__Conga_Solution_Email_Template__c/fields/APXTConga4__Conga_Solution__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Conga_Solution__c</fullName>
    <label>Conga Solution</label>
    <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
    <relationshipLabel>Conga Solution Email Templates</relationshipLabel>
    <relationshipName>Conga_Solution_Email_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>