unpackaged/main/default/objects/APXTConga4__Conga_Solution_Email_Template__c/fields/APXTConga4__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the value is true, the related email template will be used. Also for one solution, only one record can be IsDefault = true, the others must be IsDefault = false.</description>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>